PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/RepetitionRuleWithinPatterns.par
RepetitionRuleWithinPatterns {
map three([Int] input) : [Int] res {
    res[INDEX] = input[INDEX]
}
seq main() : Void {

}
}